# novel-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli.rs
apps/desktop/: README.md  package.json  rsbuild.config.ts  tsconfig.node.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: file.rs  mod.rs  project.rs  vcs.rs
apps/desktop/src/components/layout/: ActivityBar.tsx  EditorPane.tsx  ExplorerPanel.tsx  HistoryPanel.tsx  StatusBar.tsx
apps/desktop/src/components/ui/: Button.tsx  IconButton.tsx  Input.tsx  Textarea.tsx  cn.ts  index.ts
apps/desktop/src/lib/: noteApi.ts
apps/desktop/src/lib/api/: fileApi.ts  projectApi.ts  (+1 more)
apps/desktop/src/styles/: tokens.css  workspace.css
crates/core/: Cargo.toml
crates/core/src/: lib.rs  note.rs  schema.rs  storage.rs
crates/workspace-core/: Cargo.toml
crates/workspace-core/migrations/2026-02-20-074913-0000_init_vcs/: down.sql  up.sql
crates/workspace-core/migrations/2026-02-23-073357-0000_add_snapshots/: down.sql  up.sql
crates/workspace-core/src/: lib.rs  schema.rs  vcs.rs
crates/workspace-core/src/vcs/: checkout.rs  commit.rs  db.rs  diff.rs  log.rs  mod.rs  repo.rs  snapshot.rs  types.rs
crates/workspace-core/tests/: fs_ops.rs  vcs_ops.rs
docs/: design-reference.md  vcs-refactor-structure.md
src/: error.rs  main.rs  note.rs  storage.rs
tests/: cli.rs
