[package]
name = "workspace-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
diesel = { version = "2.2", features = ["sqlite"] }
diesel_migrations = "2.2"
sha2 = "0.10"
hex = "0.4"
similar = "2.7.0"

[dev-dependencies]
tempfile = "3"